--- a/docs/_includes/head-custom.html
+++ b/docs/_includes/head-custom.html
@@ -1,3 +1,1 @@
-<script type="text/javascript" async
-    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
-</script>
+{% include mathjax_config.html %}
