render latex inside code blocks

--- a/docs/_includes/mathjax_config.html
+++ b/docs/_includes/mathjax_config.html
@@ -17,7 +17,8 @@ window.MathJax = {
   options: {
     ignoreHtmlClass: 'tex2jax_ignore',
     processHtmlClass: 'tex2jax_process',
-    skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code']
+    // processHtmlClass: "math-code",
+    skipHtmlTags: ['script', 'noscript', 'style', 'textarea']
   }
 };
 </script>
